--- a/WeatherApp/gradle/libs.versions.toml
+++ b/WeatherApp/gradle/libs.versions.toml
@@ -25,6 +25,8 @@ hiltAndroidTesting = "2.45"
 coilCompose = "2.7.0"
 datastorePreferences = "1.1.3"
 uiTextGoogleFonts = "1.7.8"
+appcompat = "1.7.0"
+material = "1.12.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -88,6 +90,8 @@ robolectric = { group = "org.robolectric", name = "robolectric", version.ref = "
 
 # Dagger Hilt
 hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hiltAndroidTesting" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -99,3 +103,4 @@ ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 
 # Dagger Hilt
 dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hiltAndroid" }
+android-library = { id = "com.android.library", version.ref = "agp" }
