--- a/BookLibrary/gradle/libs.versions.toml
+++ b/BookLibrary/gradle/libs.versions.toml
@@ -17,9 +17,9 @@ kotlin = "2.1.10"
 
 navigation = "2.7.0-alpha07"
 landscapist = "2.4.0"
-room = "2.7.0-alpha08"
-ksp = "2.0.20-1.0.25"
-sqlite = "2.5.0-alpha08"
+room = "2.7.0-rc03"
+ksp = "2.1.10-1.0.30"
+sqlite = "2.5.0-rc03"
 koin = "4.0.0"
 
 [libraries]
